[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anodb"
version = "10.3"
authors = [ { name = "Fabien Coelho", email = "ano.db@coelho.net" } ]
description = "Convenient Wrapper around AioSQL and a Database Connection"
readme = "README.md"
license = { text = "CC0" }
requires-python = ">= 3.10"
dependencies = [ "aiosql >= 10.0" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Programming Language :: Python",
  "Programming Language :: SQL",
  "Topic :: Database :: Front-Ends",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
repository = "https://github.com/zx80/anodb"
documentation = "https://zx80.github.io/anodb/"
issues = "https://github.com/zx80/anodb/issues"
package = "https://pypi.org/project/anodb/"

[tool.setuptools]
py-modules = [ "anodb" ]

[project.optional-dependencies]
dev = [ "mypy", "pyright", "flake8", "black", "pytest", "coverage", "pymarkdownlnt" ]
pub = [ "build", "twine", "wheel" ]
postgres = [
  "pytest-postgresql",
  # drivers
  "psycopg2; python_version < \"3.13\"; implementation_name != \"PyPy\"",
  "psycopg",
  "pygresql",
  "pg8000"
]
mysql = [ "pytest-mysql", "mysqlclient", "pymysql", "mysql-connector" ]
