[metadata]
name = anodb
version = 7.3
author = Fabien Coelho
author_email = ano.db@coelho.net
url = https://github.com/zx80/anodb
description = Convenient Wrapper around AioSQL and a Database Connection
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Programming Language :: SQL
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules =
    anodb
install_requires = aiosql >= 4.0
